<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"

        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/contactusheading"
        style="@style/heading"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"></TextView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/phone"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_width="100dp"
            android:layout_height="wrap_content"></TextView>
             <TextView
                 android:id="@+id/phone"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_width="200dp"
            android:layout_height="wrap_content"></TextView>



    </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/email"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_width="100dp"
            android:layout_height="wrap_content"></TextView>

             <TextView
                 android:id="@+id/email"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>



    </androidx.appcompat.widget.LinearLayoutCompat>



        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/address"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="100dp"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:id="@+id/address"
                android:text=""
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>



        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            tools:visibility="visible"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>